--- a/.github/workflows/alpine-tagged-release.yml
+++ b/.github/workflows/alpine-tagged-release.yml
@@ -46,10 +46,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           tag_name: ${{ needs.prepare.outputs.tag }}
-          release_name: Release ${{ needs.prepare.outputs.tag }}
+          release_name: Release Alpha ${{ needs.prepare.outputs.tag }}
           body: |
-            SHA256 checksum
-            ${{ steps.build-driver.outputs.shasum }} $TAR_FILE_NAME.xz
+            SHA256 checksum (check like this when in download folder)
+            `echo ${{ steps.build-driver.outputs.shasum }} | sha256sum -c`
           draft: false
           prerelease: false
 
