--- a/.github/workflows/alpine-tagged-release.yml
+++ b/.github/workflows/alpine-tagged-release.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TAR_FILE_NAME: nomad-triton-driver-plugin_alpine.tar
+      XZ_FILE_NAME: nomad-triton-driver-plugin_alpine.tar.xz
+      ASSET_FILE_NAME: nomad-triton-driver-plugin_alpine-${{ needs.prepare.outputs.tag }}.tar.xz
     steps:
 
     - name: Check out code into the Go module directory
@@ -37,7 +39,8 @@ jobs:
         docker rm $container
         docker rmi $tag
         xz $TAR_FILE_NAME
-        echo ::set-output name=shasum::$(sha256sum $TAR_FILE_NAME.xz)
+        echo shasum_long=$(sha256sum $XZ_FILE_NAME)
+        echo ::set-output name=shasum::${$shasum_long:0:64}
 
     - name: Create Release
       id: create_release
@@ -48,8 +51,10 @@ jobs:
           tag_name: ${{ needs.prepare.outputs.tag }}
           release_name: Release Alpha ${{ needs.prepare.outputs.tag }}
           body: |
-            SHA256 checksum (check like this when in download folder)
-            `echo ${{ steps.build-driver.outputs.shasum }} | sha256sum -c`
+            SHA256 checksum (in Linux, check like this when in download folder)
+            ```
+            echo ${{ steps.build-driver.outputs.shasum }}  ${{ env.ASSET_FILE_NAME }} | sha256sum -c
+            ```
           draft: false
           prerelease: false
 
@@ -60,6 +65,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ env.TAR_FILE_NAME }}.xz
-          asset_name: nomad-triton-driver-plugin_alpine-${{ needs.prepare.outputs.tag }}.tar.xz
+          asset_path: ./${{ env.XZ_FILE_NAME }}
+          asset_name: ${{ ASSET_FILE_NAME }}
           asset_content_type: application/x-xz
