--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,7 +1,13 @@
 name: Go tests
 
 # Triggers the workflow on push or pull request events
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
 
 jobs:
 
