--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -4,10 +4,10 @@ name: Go tests
 on: 
   push:
     branches:
-      - "*"
+      - "f-remotetask-3"
   pull_request:
     branches:
-      - "*"
+      - "f-remotetask-3"
 
 jobs:
 
@@ -30,7 +30,7 @@ jobs:
         cd ..
         git clone https://github.com/teutat3s/nomad
         cd nomad
-        git checkout f-remotetask-3
+        git checkout f-remotetask-3-v1.0.0-beta2
         cd ../nomad-triton-driver-plugin
         sed -i /home/d go.mod
         echo "replace github.com/hashicorp/nomad => /home/runner/work/nomad-triton-driver-plugin/nomad" >> go.mod
