Default branch: master is now main

--- a/.github/workflows/alpine-tagged-release.yml
+++ b/.github/workflows/alpine-tagged-release.yml
@@ -2,7 +2,7 @@ name: Build triton-driver binary on alpine linux and release it
 
 on:
   create:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   prepare:
